feat: add application entry point and bootstrap flow